<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Weather">Weather</string>
    <string name="WeekForecast">Week Forecast</string>
    <string name="DayForecast">Day Forecast</string>
    <string name="humidity">humidity</string>
    <string name="clouds">clouds</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="pressure">pressure</string>
    <string name="forcast_info">Forcast Info</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="celsius">Celsius</string>
    <string name="temperature">Temperature</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="milies_hour">miles/hour</string>
    <string name="meter_sec">meter/sec</string>
    <string name="gps">GPS</string>
    <string name="location_method">Location method</string>
    <string name="cellular">Cellular</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="favourites">Favourites</string>
    <string name="google_map_api_key">AIzaSyADndwyHVmWL3K9h1MyxsAlIS89R0jFuzk</string>
    <string name="add_location">add location</string>
    <string name="change_location">change location</string>
    <string name="map">Map</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="From">"From : "</string>
    <string name="to">"to : "</string>
    <string name="alarm">alarm</string>
    <string name="notification">notification</string>
    <string name="Alert">Alert</string>
    <string name="celcius_symbol">C</string>
    <string name="fahrenheit_symbol">F</string>
    <string name="kelvin_symbol">K</string>
    <string name="now">Now</string>
    <string name="wind_meter_sec">meter/sec</string>
    <string name="wind_miles_hour">miles/hour</string>
    <string name="pressure_unit">mbar</string>
    <string name="gps_msg">"I can not find your location..."</string>
    <string name="permission">"open permission "</string>
    <string name="ask_delete">Are you sure you want to delete it ?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="brand_name">SkyMood</string>
    <string name="dismiss">Dismiss</string>


</resources>